Corrected issues with style